@@ -5,7 +5,7 @@
 <title>Interactive Template Tester</title>
 
 <!-- JSSpec -->
-<link rel="stylesheet" type="text/css" href="assets/slickspec.css" />
+<link rel="stylesheet" type="text/css" href="../assets/slickspec.css" />
 <script type="text/javascript" src="../assets/diff_match_patch.js"></script>
 <script type="text/javascript" src="../assets/JSSpec.js"></script>
 <script type="text/javascript" src="../assets/JSSpecHelpers.js"></script>
