@@ -1,3 +1,5 @@
+* Make NWMatcher work when embedded in XHTML or XML documents. [jddalton]
+
 * Ensure ancestor/descendant resolvers don't end on the document node. [Diego Perini]
 
 * Removed the client_api() named expression for Safari 2 support. [Diego Perini]
